--- a/Pages/Registros/R_Articulos.razor
+++ b/Pages/Registros/R_Articulos.razor
@@ -117,8 +117,8 @@
                     <p />
                     <a style="position: absolute; top:0;  right:0; margin-right: 10px; margin-top: 339px;"
                         class="rz-border-radius-4 shadow border border-0 btn btn-lg btn btn-warning"
-                        data-toggle="tooltip" data-placement="right" title="Ingresar al inventario"
-                        href="inventarioArticulos">
+                        data-toggle="tooltip" data-placement="right" title="Ingresar al reporte de articulos"
+                        href="reportearticulos">
                         Articulos
                         <i class="oi oi-cart"></i>
                     </a>
