--- a/Pages/Consultas/Inventario.razor
+++ b/Pages/Consultas/Inventario.razor
@@ -1,4 +1,4 @@
-@page "/inventarioArticulos"
+@page "/inventario"
 
 
 @inject AuthenticationStateProvider Authentication
@@ -57,7 +57,7 @@
 
                     <div class="form-group col-3">
                         <label>Descripción Articulo</label>
-                        <InputText @bind-Value="articulo.Nombre" placeholder="Descripción articulo" class="form-control"
+                        <InputText @bind-Value="Nombre" placeholder="Descripción articulo" class="form-control"
                             readOnly="true" />
                     </div>
 
@@ -108,14 +108,14 @@
                                 d="M7.752.066a.5.5 0 0 1 .496 0l3.75 2.143a.5.5 0 0 1 .252.434v3.995l3.498 2A.5.5 0 0 1 16 9.07v4.286a.5.5 0 0 1-.252.434l-3.75 2.143a.5.5 0 0 1-.496 0l-3.502-2-3.502 2.001a.5.5 0 0 1-.496 0l-3.75-2.143A.5.5 0 0 1 0 13.357V9.071a.5.5 0 0 1 .252-.434L3.75 6.638V2.643a.5.5 0 0 1 .252-.434L7.752.066ZM4.25 7.504 1.508 9.071l2.742 1.567 2.742-1.567L4.25 7.504ZM7.5 9.933l-2.75 1.571v3.134l2.75-1.571V9.933Zm1 3.134 2.75 1.571v-3.134L8.5 9.933v3.134Zm.508-3.996 2.742 1.567 2.742-1.567-2.742-1.567-2.742 1.567Zm2.242-2.433V3.504L8.5 5.076V8.21l2.75-1.572ZM7.5 8.21V5.076L4.75 3.504v3.134L7.5 8.21ZM5.258 2.643 8 4.21l2.742-1.567L8 1.076 5.258 2.643ZM15 9.933l-2.75 1.571v3.134L15 13.067V9.933ZM3.75 14.638v-3.134L1 9.933v3.134l2.75 1.571Z" />
                         </svg></label>
                     <div class="form-group col-2">
-                        <InputNumber @bind-Value="articulo.CantidadAumentada" class="form-control bg-fondoinventario"/>
-                        <ValidationMessage For="@(() => articulo.CantidadAumentada)" />
+                        <InputNumber @bind-Value="CantidadNueva" class="form-control bg-fondoinventario"/>
+                        
                     </div>
                     <p />
 
 
                     <div class="from-group col-2" style="margin:auto">
-                        <InputNumber @bind-Value="articulo.CantidadRegistrada" class="form-control" readOnly="true" />
+                        <InputNumber @bind-Value="CantidadRegistrada" class="form-control" readOnly="true" />
                     </div>
 
                     <div class="form-group col" style="margin:auto">
@@ -160,6 +160,12 @@
     [Parameter]
     public int ArticuloId { get; set; }
 
+    public double CantidadNueva { get; set; }
+
+    public double CantidadRegistrada { get; set; }
+
+    public string Nombre { get; set; }
+
     public string Filtro ="0";
 
     public string Criterio = string.Empty;
@@ -184,6 +190,7 @@
     {
         articulo = new Articulo();
         ArticuloList = articuloBLL.GetList(c => true);
+        CantidadNueva=0;
  
        if (ArticuloId > 0)
         {
@@ -199,41 +206,27 @@
 
         if (auxArticulo != null)
         {           
-            articulo.Nombre = auxArticulo.Nombre;
-            articulo.CantidadRegistrada = auxArticulo.CantidadRegistrada;                   
+            Nombre = auxArticulo.Nombre;
+            CantidadRegistrada = auxArticulo.CantidadRegistrada;                   
         }
     }
 
      private void ActualizandoUnidadesArticulo()
     {
-        Articulo auxArticulo = articuloBLL.Buscar(int.Parse(Criterio));
-
-        if (auxArticulo != null)
-        {                      
            
-           articulo.CantidadAumentada += auxArticulo.CantidadRegistrada;          
-        }
+            articulo.CantidadAumentada = CantidadNueva + CantidadRegistrada;                 
+        
     }
 
     public void Actualizar() // Guardar articulo
     {
         
-        if (articulo.Nombre == string.Empty)
+        if (CantidadNueva == 0)
         {
-            Toast.ShowWarning("Debe consultar el articulo");
+            Toast.ShowWarning("Ingrese la nueva cantidad");
             return;
         }
-        if (articulo.CantidadAumentada == 0)
-        {
-            Toast.ShowWarning("Ingrese la cantidad que desea aumentar");
-            return;
-        }
-
-        if (articulo.CantidadRegistrada == 0)
-        {
-            Toast.ShowWarning("Consulte el articulo");
-            return;
-        }
+        
 
         var articulo2 = articuloBLL.Guardar(articulo); ;
         
