--- a/Pages/Consultas/Reorden.razor
+++ b/Pages/Consultas/Reorden.razor
@@ -46,10 +46,13 @@
             <tbody>
             @foreach (var item in lista)
             {
-                @if (item.CantidadComprada <= 50)
+                @if (item.CantidadComprada > 0 ) 
                 {
                     descripcion = categoriaBLL.Buscar(item.CategoriaId);
                     @if (descripcion == null) break;
+
+                    @if (item.CantidadComprada <= 50 ) 
+                {
                     <tr class="text-center">
                         <td class="border border-3">@item.ArticuloId</td>
 
@@ -67,7 +70,7 @@
                         </td>
                        
                     </tr>
-                    
+                }
                 }
             }
             </tbody>
