--- a/Pages/Consultas/C_Suplidor.razor
+++ b/Pages/Consultas/C_Suplidor.razor
@@ -82,7 +82,7 @@
                 </th>
 
                 <th>
-                    Descripción del articulo
+                    Categoria de articulo
                     <div class="oi oi-credit-breack"></div>
                 </th>
 
