--- a/Pages/Consultas/Compras.razor
+++ b/Pages/Consultas/Compras.razor
@@ -14,7 +14,7 @@
     <div class="form-group col-3">
         <a type="button" class="rz-border-radius-4 shadow border border-4 btn-lg btn btn-Inventario"
             style="position: absolute; top:0;  right:0; margin-right: 25px; margin-top: 75px;" data-toggle="tooltip"
-            data-placement="right" title="Inventario de articulos" href="inventarioArticulos"><span>Inventario</span>
+            data-placement="right" title="Inventario de articulos" href="inventario"><span>Inventario</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                 class="bi bi-minecart-loaded" viewBox="0 0 16 16">
                 <path
