--- a/Pages/Registros/OrdenDeCompra.razor
+++ b/Pages/Registros/OrdenDeCompra.razor
@@ -59,7 +59,7 @@
                     @foreach (var item in ArticuloList)
                     { 
 
-                        if(item.CantidadRegistrada > 0)
+                        if(item.Precio < 1)
                       {
                         <option value="@item.ArticuloId">@item.Nombre</option>
                       
@@ -70,7 +70,7 @@
 
             @*...................... Categoria ......................*@
 
-            <div class="form-group col-md-3">
+            <div class="form-group col-md-3" >
                 <label>
                     Suplidor
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
@@ -79,8 +79,8 @@
                             d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5v-7zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456zM12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12v4zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z" />
                     </svg>
                 </label>
-                <InputSelect @bind-Value="articulo.SuplidorId" class="form-select text-14">
-                    <option value="0" disabled selected>Seleccione un suplidor</option>
+                <InputSelect @bind-Value="articulo.SuplidorId" class="form-select text-14" >
+                    <option value="0" disabled selected>Suplidoresㅤㅤㅤ</option>
                     @foreach (Suplidor item in SuplidorList)
                     {
                         <option value="@item.SuplidorId">@item.Nombre </option>
@@ -92,7 +92,7 @@
 
             <div class="form-group col-3">
                 <label>Cantidad</label>
-                <InputNumber @bind-Value="articulo.CantidadComprada" class="form-control" />
+                <InputNumber @bind-Value="CantidadComprada" class="form-control" />
             </div>
         </div>
         <br>
@@ -167,7 +167,7 @@
                       
                         @foreach (var item in ArticuloList)
                         {
-                           if (item.CantidadRegistrada > 0) 
+                           if (item.Precio < 1) 
                            {
                             
                             descripcion = categoriaBLL.Buscar(item.CategoriaId);
@@ -203,6 +203,8 @@
 
     [Parameter]
     public int ArticuloId { get; set; }
+
+    public double CantidadComprada { get; set; }
 
     Articulo articulo = new Articulo();
 
@@ -249,6 +251,21 @@
         if (auxArticulo != null)
         {
             articulo.Costo = auxArticulo.Costo;
+
+
+            var Articulo = articuloBLL.Buscar(articulo.ArticuloId);
+            if (Articulo != null)
+            {
+                articulo = Articulo;
+
+                
+
+                Toast.ShowSuccess($"Articulo: {articulo.Nombre}, encontrado ");
+            }
+            else
+            {
+                Toast.ShowWarning($"No existe un articulo con este Id: {articulo.ArticuloId}");
+            }
             
             
         }
@@ -256,14 +273,11 @@
 
     private void ActualizandoUnidades() // Obteniendo los datos del articulo seleccionado
     {
-        Articulo auxArticulo = articuloBLL.Buscar(articulo.ArticuloId);
-
-        if (auxArticulo != null)
-        {
+        
+            articulo.CantidadRegistrada = articulo.CantidadRegistrada - CantidadComprada;
+            articulo.CantidadComprada = CantidadComprada;
             
-            auxArticulo.CantidadRegistrada -= articulo.CantidadComprada;
-            
-        }
+        
     }
 
 
@@ -281,15 +295,13 @@
             return;
         }
 
-        if (articulo.CantidadComprada == 0) // Validacion
+        if (CantidadComprada == 0) // Validacion
         {
             Toast.ShowWarning("Ingrese la cantidad a comprar.");
             return;
         }
- 
-        Articulo auxArticulo = articuloBLL.Buscar(articulo.ArticuloId);
 
-        if (articulo.CantidadComprada > auxArticulo.CantidadRegistrada) // Validacion
+        if (CantidadComprada > articulo.CantidadRegistrada) // Validacion
         {
             Toast.ShowWarning("La cantidad ingresada no puede ser mayor a la cantidad de almacen.");
             return;
@@ -307,15 +319,17 @@
             Toast.ShowWarning("El precio debe ser mayor al costo"); // Validacion
             return;
         }
-
+        
+        ActualizandoUnidades();
         var articulo2 = articuloBLL.ExisteNombre(articulo.Nombre);
         if (articulo2 == null) //si no existe
         {
             if (articuloBLL.Guardar(articulo))
             {
-                Toast.ShowSuccess($"Articulo: {articulo.Nombre}, Guardado correctamente");
-                ActualizandoUnidades();
+                Toast.ShowSuccess($"Articulo: {articulo.Nombre}, Comprado con exito");
+                
                 articulo = new Articulo();
+                CantidadComprada = 0;
             }
             else
                 Toast.ShowError("No fue posible guardar");
