--- a/Pages/Registros/R_Suplidor.razor
+++ b/Pages/Registros/R_Suplidor.razor
@@ -125,8 +125,8 @@
                     @*...................... Descripción Articulo ......................*@
 
                     <div class="form-group col-3">
-                        <label>Descripción Articulo</label>
-                        <InputText @bind-Value="suplidor.DescripcionArticulo" placeholder="Descripción Articulo"
+                        <label>Categoria de articulo</label>
+                        <InputText @bind-Value="suplidor.DescripcionArticulo" placeholder="Categoria de articulo"
                             class="form-control" />
                         <ValidationMessage For="@(() => suplidor.DescripcionArticulo)" />
                     </div>
