--- a/Pages/Consultas/Reorden.razor
+++ b/Pages/Consultas/Reorden.razor
@@ -65,7 +65,7 @@
                         <td class="border border-3">
                             <a class="btn btn-sm btn-reorden oi oi-cart" data-toggle="tooltip"
                                data-placement="right" title="Realizar compra"
-                               href="compras">
+                               href="compras/@item.ArticuloId">
                             </a>
                         </td>
                        
