--- a/Pages/Consultas/C_Clientes.razor
+++ b/Pages/Consultas/C_Clientes.razor
@@ -7,9 +7,11 @@
 
 <EditForm Model="lista">
 
-    <a type="button" class="rz-border-radius-4 shadow border border-4 btn-lg btn btn-warning" data-toggle="tooltip"
-       data-placement="right" title="Regresar al formulario" href="clientes">
-        <i class="oi oi-arrow-circle-left"/>
+    <a type="button" class="rz-border-radius-4 shadow border border-1 btn-lg btn btn-warning" data-toggle="tooltip"
+       data-placement="right" title="Registrar nuevo cliente" href="clientes">
+        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-people-fill" viewBox="0 0 16 16">
+                            <path d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7Zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm-5.784 6A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216ZM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5Z"/>
+                        </svg>
     </a>
     <br/>
     <p/>
@@ -99,9 +101,8 @@
                     <div class="oi oi-credit-card"></div>
                 </th>
 
-                <th>Fecha Nacimiento</th>
 
-                <th>Ver</th>
+                <th>Editar</th>
 
             </tr>
             </thead>
@@ -129,10 +130,18 @@
 
                         <td>@item.Cedula</td>
 
-                        <td>@item.FechaNacimiento.ToString("dd/MM/yyyy")</td>
+                     
 
                         <td>
-                            <a class="btn btn-sm btn-outline-success oi oi-eye" href="clientes/@item.ClienteId"></a>
+                            <a type="button" class="rz-border-radius-1 shadow border border-1 btn-lg btn btn-primary" data-toggle="tooltip"
+       data-placement="right" title="Editar informacion" href="clientes/@item.ClienteId">
+        
+            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+  <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+  <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+</svg>
+    </a>
+                        
                         </td>
                     </tr>
                 }
